# rust-api

./: .env  Cargo.toml  README.md
migrations/2021-11-20-141006_cats/: up.sql
src/: main.rs  model.rs
static/: index.html
