[package]
name = "learn-api-with-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
handlebars = { version = "4.1.5", features = ["dir_source"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8.8"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.71"
dotenv = "0.15.0"
awmp = "0.7.0"
http = "0.2.5"